--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -40,10 +40,10 @@
   margin-left: 500px;
   margin-top: 10px;
 }
-.container{
+/* .container{
   background-image: url(candle.jpg);
   width: 100%;
   height: auto;
 
 
-}
+} */
